# benchllm

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  run.sh
benchllm/: __init__.py  __main__.py  autotune.py  catalog.py  cli.py  prepare.py  reporting.py  runner.py
benchllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
catalogs/: dual-3090-openai.yaml
docs/: deployment-playbook.md
tests/: test_autotune.py  test_bootstrap.py  test_catalog.py  test_cli.py  test_runner.py
